--- a/public/main.css
+++ b/public/main.css
@@ -18,25 +18,23 @@ body {
 }
 #menu-wrapper {
   width: 100%;
-  display: flex;
   align-items: initial;
+  display: flex;
   border: 1px solid black;
 }
-
+.option-wrapper {
+  border: 1px solid black;
+}
 .menu-label {
+  height: 1.5em;
   padding: 0 .5em 0 .4em;
   background: #F7F7FF;
   border: 1px solid black;
+  border-bottom: none;
+  border-radius: 5px 5px;
   font-size: 2em;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-}
-.menu-number {
-  background: #495867;
-  margin-right: .3em;
-  color: #F7F7FF;
-  border: 1px solid black;
 }
 .menu-title {
   display: inline-block;
@@ -75,10 +73,10 @@ body {
   align-items: center;
   font-size: 1.3em;
   padding: 0 .5em 0 .4em;
-  width: 100%;
-  border: 5px solid black;
+  width: inherit;
   background-color: #F7F7FF;
 }
 .menu-contents label {
   margin-right: .4em;
+  border-bottom: unset;
 }
