--- a/public/main.css
+++ b/public/main.css
@@ -22,7 +22,7 @@ body {
   margin-bottom: 3em;
 }
 
-/* flex container for items of a different height */
+/* flex container for inline items of a different height */
 .container {
   display: flex;
   align-items: center;
@@ -71,7 +71,16 @@ body {
   display: none;
 }
 .menu-contents h3 {
-  margin-top: 0;;
+  margin-top: 0;
+}
+.menu-contents input {
+  width: 15em;
+  height: 2em;
+  font-size: 1.2em;
+  border: 2px solid #293241;
+  border-radius: 5px;
+  background: #BDD5EA;
+  text-align: center; 
 }
 
 
@@ -81,11 +90,10 @@ body {
   margin-bottom: .3em;
 }
 .sample-number {
-  height: 1em;
-  width: 1em;
-  margin-right: .2em;
-  border-radius: 50%;
-  padding: .1em .1em;
+  border-radius: 5px;
+  letter-spacing: .2em;
+  margin: 0 .2em;
+  padding: .1em .2em;
   display: flex;
   justify-content: center;
   align-items: center;
