--- a/public/main.css
+++ b/public/main.css
@@ -1,82 +1,96 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 body {
   margin: 0;
-  background: #577399;
+  font-family: "Roboto Condensed";
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
-  padding-top: 20px;
+  /* display: flex;
+  flex-direction: column; */
+  padding: 10px 15px;
+  height: 100vh; 
   width: 100vw;
+
+}
+
+.home {
+  color: #FFFFFF;
+  background: #DC6C6C;
+}
+.result {
+  color: #000;
+  background: #FAE5E5;
+}
+
+
+
+nav {
+  display: flex;
   height: auto;
+  justify-content: space-between;
+  font-size: 1em;
+  position: relative;
+  top: 0; 
 }
 
-.app-wrapper {
-  text-align: center;
-  min-width: 380px;
-  max-width: 700px;
-  margin: auto; 
+
+.nunchuck {
+  height: 54px;
+  width: 58px;
 }
-#menu-wrapper {
-  width: 100%;
-  align-items: initial;
-  display: flex;
-  border: 1px solid black;
-}
-.option-wrapper {
-  border: 1px solid black;
-}
-.menu-label {
-  height: 1.5em;
-  padding: 0 .5em 0 .4em;
-  background: #F7F7FF;
-  border: 1px solid black;
-  border-bottom: none;
-  border-radius: 5px 5px;
-  font-size: 2em;
+#logo-container {
   display: flex;
   align-items: center;
 }
-.menu-title {
-  display: inline-block;
-  font-size: 1.5em;
-  margin-right: .5em
+
+
+main {
+  width: auto;
+  height: auto;
+  display: flex; 
+  flex: 1;
+  /* flex-direction: column;
+  align-items: center;
+  justify-content: center; */
 }
-.current-value {
-  margin-right: .25em;
-  font-size: 1.2em;
-}
-.drop-down {
-  text-decoration: none;
-  font-size: .8em;
-  color: #FE5F55;
-  border: 1px solid black;
-}
+
+
+
 .container {
-  display: flex;
-  align-items: center;
-}
-
-/* These selectors are used for by the pancake-menu controller */
-.colapsed .menu-contents {
-  display: none; 
-}
-.colapsed .menu-label {
-  background: #BDD5EA;
-  color: #495867;
-}
-
-
-/*  CSS Rules for the menu contents */
-.menu-contents {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 1.3em;
-  padding: 0 .5em 0 .4em;
-  width: inherit;
-  background-color: #F7F7FF;
 }
-.menu-contents label {
-  margin-right: .4em;
-  border-bottom: unset;
+
+h1 {
+  color: #FFFFFF;
 }
+
+
+#phone-input {
+  padding: 7px 5px;
+  border-radius: 8px;
+  background: #FAE5E5;
+  width: 300px;
+  margin-bottom: 14px;
+  text-align: center; 
+}
+
+/*************************** TO DO - CHANGE BUTTON STYLE */
+.submit {
+  padding: 7px 15px;
+  border-radius: 5px;
+  display: block
+}
+
+.transition {
+  z-index: 2;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%; 
+}
+
