--- a/public/main.css
+++ b/public/main.css
@@ -10,7 +10,6 @@ body {
   justify-content: center;
   font-family: "Roboto Condensed";
   box-sizing: border-box;
-  padding: 0 15px;
   height: 100vh; 
   width: 100vw;
 }
@@ -28,38 +27,33 @@ body {
 nav {
   display: flex;
   height: auto;
-  width: 100%;
+  width: 98%;
+  align-items: center;
   justify-content: space-between;
-  font-size: 1em;
+  font-size: .8em;
   position: fixed;
   top: 0; 
 }
 .nunchuck {
-  height: 54px;
-  width: 58px;
+  height: 42px;
+  width: 46px;
 }
 #logo-container {
   display: flex;
   align-items: center;
 }
-
-
-main {
-  border: 1px solid black;
+#flagrant-logo {
+  width: 110px;
+  height: 23px;
 }
 
+
+
 .container {
-  position: relative;
-  height: auto; 
-  width: auto; 
+  position: relative; 
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-
-h1 {
-  color: #FFFFFF;
 }
 
 #phone-input {
@@ -75,7 +69,8 @@ h1 {
 .submit {
   padding: 7px 15px;
   border-radius: 5px;
-  display: block
+  display: block;
+  margin: auto;
 }
 
 .transition {
@@ -88,7 +83,21 @@ h1 {
   border-radius: 50%;
 }
 
-.test {
-  width: 10px;
-  height: 10px;
+/* ************************* Result ********** */
+main {
+  border: 1px solid black;
+  text-align: center;
+  width: 70%;
+}
+
+.result-container {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+  margin: auto;
+}
+
+.result-group {
+  display: flex;
+  align-items: center;
 }
