--- a/public/main.css
+++ b/public/main.css
@@ -49,7 +49,6 @@ nav {
   height: 23px;
 }
 
-
 .container {
   position: relative; 
   display: flex;
@@ -154,4 +153,28 @@ main {
 .result-group {
   display: flex;
   align-items: center;
+  height: 80px;
 }
+
+.result-highlight {
+  text-decoration: none;
+  background: #DC6C6C;
+  border-radius: 15px;
+  padding: 7px 15px;
+  color: #FFF; 
+}
+
+#embed-preview {
+  background: #d98282;
+  width: 100%;
+}
+
+#phone-icon {
+  margin-right: 10px;
+}
+
+.result-icon {
+  height: 55px;
+  width: 55px;
+}
+
