--- a/public/main.css
+++ b/public/main.css
@@ -10,7 +10,6 @@ body {
   justify-content: center;
   font-family: "Roboto Condensed";
   box-sizing: border-box;
-  padding: 0 15px;
   height: 100vh; 
   width: 100vw;
 }
@@ -27,10 +26,14 @@ body {
 /* ******** Nav Logo Style *********** */
 nav {
   display: flex;
-  height: auto;
-  width: 100%;
+  flex: none;
+  height: 60px;
+  min-height: 60px;
+  width: 98%;
+  max-width: 800px;
+  padding: 5px 30px;
+  align-items: center;
   justify-content: space-between;
-  font-size: 1em;
   position: fixed;
   top: 0; 
 }
