--- a/public/main.css
+++ b/public/main.css
@@ -2,14 +2,17 @@
 
 /* ********* Page Level CSS *********** */
 
+html, body { margin: 0; padding: 0; }
+* { box-sizing: border-box; }
+
 body {
-  margin: 0;
-  display: flex; 
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: minmax(60px, auto) 1fr; 
   align-items: center;
+  justify-items: center;
   justify-content: center;
   font-family: "Roboto Condensed";
-  box-sizing: border-box;
   height: 100vh; 
   width: 100vw;
 }
@@ -26,23 +29,21 @@ body {
 /* ******** Nav Logo Style *********** */
 nav {
   display: flex;
-  flex: none;
   height: 60px;
-  min-height: 60px;
-  width: 98%;
-  max-width: 800px;
+  width: 100%;
+  max-width: 700px;
   padding: 5px 30px;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
-  top: 0; 
 }
 .nunchuck {
   height: 42px;
+  flex-shrink: 0;
   width: 46px;
 }
 #logo-container {
   display: flex;
+  flex-shrink: 0;
   align-items: center;
 }
 #flagrant-logo {
@@ -96,6 +97,7 @@ nav {
 main {
   text-align: center;
   width: 70%;
+  border: 1px solid black;
 }
 
 .result-container {
