--- a/public/main.css
+++ b/public/main.css
@@ -26,14 +26,13 @@ body {
 /* ******** Nav Logo Style *********** */
 nav {
   display: flex;
-  flex: none;
   height: 60px;
-  min-height: 60px;
   width: 98%;
   max-width: 800px;
   padding: 5px 30px;
   align-items: center;
   justify-content: space-between;
+  font-size: .8em;
   position: fixed;
   top: 0; 
 }
@@ -49,6 +48,7 @@ nav {
   width: 110px;
   height: 23px;
 }
+
 
 .container {
   position: relative; 
@@ -142,4 +142,16 @@ main {
 .test {
   width: 10px;
   height: 10px;
+}
+
+.result-container {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+  margin: auto;
+}
+
+.result-group {
+  display: flex;
+  align-items: center;
 }
