--- a/public/main.css
+++ b/public/main.css
@@ -11,8 +11,8 @@ body {
   grid-template-rows: min-content 1fr;
   grid-template-areas: "logo"
                        "main";
-  justify-items: center;
   font-family: "Roboto Condensed";
+  justify-items: center;
 }
 
 nav {
@@ -20,17 +20,22 @@ nav {
   display: flex;
   width: 100%;
   max-width: 700px;
-  padding: 5px 30px;
+  padding: 0 10px;
   justify-content: space-between;
   align-items: center;
+  
 }
 
 main {
+  grid-area: main;
+}
+
+.page-center {
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  grid-area: main;
 }
 
 .home {
@@ -58,14 +63,12 @@ main {
   height: 23px;
 }
 
-
 .container {
   display: flex;
   position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin-right: 15px;
 }
 
  
@@ -103,20 +106,24 @@ main {
 /* ************************* Result ********** */
 
 .result-container {
+  border: 1px solid black;
   display: flex;
   justify-content: space-between;  
   margin-bottom: 30px;
 }
 
 .result-title {
+  text-align: center;
+  margin: 10px auto;
   font-size: 3em;
-  margin-bottom: 40px;
+  border: 1px solid black;
 }
 
 .result-group {
   display: flex;
+  border: 1px solid black;
   align-items: center;
-  height: 80px;
+  height: 100px;
 }
 
 .result-highlight {
@@ -146,4 +153,11 @@ main {
 .test {
   width: 10px;
   height: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .result-container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
