--- a/public/main.css
+++ b/public/main.css
@@ -27,6 +27,7 @@ nav {
 }
 
 main {
+  width: 100%;
   grid-area: main;
 }
 
@@ -69,6 +70,11 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.container > * {
+  margin-bottom: 5px;
 }
 
  
@@ -106,24 +112,21 @@ main {
 /* ************************* Result ********** */
 
 .result-container {
-  border: 1px solid black;
+  max-width: 700px;
   display: flex;
-  justify-content: space-between;  
-  margin-bottom: 30px;
+  justify-content: space-between;
+  margin: 0 auto 30px auto;  
 }
 
 .result-title {
   text-align: center;
   margin: 10px auto;
-  font-size: 3em;
-  border: 1px solid black;
+  font-size: 2em;
 }
 
 .result-group {
   display: flex;
-  border: 1px solid black;
   align-items: center;
-  height: 100px;
 }
 
 .result-highlight {
@@ -141,13 +144,10 @@ main {
 
 }
 
-#phone-icon {
-  margin-right: 10px;
-}
-
-.result-icon {
-  height: 55px;
-  width: 55px;
+.icon {
+  margin: 0 5px; 
+  height: 45px;
+  width: 45px;
 }
 
 .test {
